[gd_scene load_steps=2 format=3 uid="uid://54winj8i144m"]

[ext_resource type="Script" uid="uid://cgg3b65kydfva" path="res://Scripts/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Rhythm Game"

[node name="PlayButton" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Quit"
